--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "bootstrap-vue": "^2.21.1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "webpack": "^4.39.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "compression-webpack-plugin": "^7.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
