--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^2.6.12",
+    "vue-router": "^3.4.9",
     "webpack": "^4.39.3"
   },
   "devDependencies": {
