--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap-vue": "^2.21.1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "mime-types": "^2.1.28",
     "vue": "^2.6.12",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.4.9",
     "webpack": "^4.39.3"
   },
