--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sass": "node-sass src/assets/sass/main.scss public/css/style.css"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.1",
     "core-js": "^3.6.5",
