--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mime-types": "^2.1.28",
     "vue": "^2.6.12",
     "vue-carousel-3d": "^1.0.1",
+    "vue-clickaway": "^2.2.2",
     "vue-router": "^3.4.9",
     "webpack": "^4.39.3"
   },
